deployment/poi.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: api
---
apiVersion: v1
kind: Service
metadata:
  name: poi-service
  namespace: api
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: poi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi-deployment
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        image: registrybyi5325.azurecr.io/tripinsights/poi:1.0
        volumeMounts:
        - mountPath: "/mnt/secrets-store"
          # this mount only triggers the keyvault provider to generate the secret
          name: secrets-store
          readOnly: true
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          volumes:
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: azure-kvname
