deployment/tripviewer.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: tripviewer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - env:
        - name: TRIPS_API_ENDPOINT
          value: trips-service
        - name: USERPROFILE_API_ENDPOINT
          value: user-service
        image: registrybyi5325.azurecr.io/tripinsights/tripviewer:1.0
        name: tripviewer
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
