deployment/user-java.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-java-service
  namespace: api
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: user-java
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-deployment
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        image: registrybyi5325.azurecr.io/tripinsights/user-java:1.0  
        volumeMounts:
        - mountPath: "/mnt/secrets-store"
          # this mount only triggers the keyvault provider to generate the secret
          name: secrets-store
          readOnly: true
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 300Mi
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: azure-kvname
