deployment/userprofile.yaml
apiVersion: v1
kind: Service
metadata:
  name: userprofile-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: userprofile
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - env:
        - name: SQL_USER
          valueFrom:
            secretKeyRef:
              key: username
              name: dbcredentials
        - name: SQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: dbcredentials
        - name: SQL_SERVER
          value: sqlserverbyi5325.database.windows.net
        - name: SQL_DBNAME
          value: mydrivingDB
        image: registrybyi5325.azurecr.io/tripinsights/userprofile:1.0
        name: userprofile
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
