deployment/ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: web
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Exact
          backend:
            service:
              name: tripviewer-service
              port:
                number: 80
